Refactored services, integration with lombok, added mapstruct