@@ -4,9 +4,10 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.ivan.restapplication.dto.UserDTO;
+import com.ivan.restapplication.model.dto.UserDto;
 import com.ivan.restapplication.service.SpotifyUserService;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
@@ -15,16 +16,14 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
-public class UserService implements SpotifyUserService {
+@RequiredArgsConstructor
+public class SpotifyUserServiceImpl implements SpotifyUserService {
 
-    @Autowired
-    private ObjectMapper mapper;
-
-    @Autowired
-    private RestTemplate restTemplate;
+    private final ObjectMapper mapper;
+    private final RestTemplate restTemplate;
+    private static final String ITEMS = "items";
 
     @Override
     public JsonNode showUserProfile() throws JsonProcessingException {
@@ -34,22 +33,22 @@ public class UserService implements SpotifyUserService {
     }
 
     @Override
-    public UserDTO getSpotifyUserDTO() {
-        return restTemplate.getForObject("https://api.spotify.com/v1/me", UserDTO.class);
+    public UserDto getSpotifyUserDTO() {
+        return restTemplate.getForObject("https://api.spotify.com/v1/me", UserDto.class);
     }
 
     @Override
     public JsonNode findTopArtists(String term) throws JsonProcessingException {
         return mapper
                 .readTree(restTemplate
-                        .getForObject("https://api.spotify.com/v1/me/top/artists?limit=50&time_range=" + term, String.class)).get("items");
+                        .getForObject("https://api.spotify.com/v1/me/top/artists?limit=50&time_range=" + term, String.class)).get(ITEMS);
     }
 
     @Override
     public JsonNode findTopTracks(String term) throws JsonProcessingException {
         return mapper
                 .readTree(restTemplate
-                        .getForObject("https://api.spotify.com/v1/me/top/tracks?limit=50&time_range=" + term, String.class)).get("items");
+                        .getForObject("https://api.spotify.com/v1/me/top/tracks?limit=50&time_range=" + term, String.class)).get(ITEMS);
     }
 
     @Override
@@ -59,7 +58,7 @@ public class UserService implements SpotifyUserService {
                         .getForObject("https://api.spotify.com/v1/me/following?type=artist&limit=50", String.class)
                 );
 
-        ArrayNode items = (ArrayNode) followedArtistsJson.findValue("items");
+        ArrayNode items = (ArrayNode) followedArtistsJson.findValue(ITEMS);
 
         String next = followedArtistsJson.get("artists").get("next").asText();
 
@@ -68,7 +67,7 @@ public class UserService implements SpotifyUserService {
                     .readTree(restTemplate
                             .getForObject(next, String.class)
                     );
-            for (JsonNode e : loopFollowedArtistsJson.findValue("items")) {
+            for (JsonNode e : loopFollowedArtistsJson.findValue(ITEMS)) {
                 items.add(e);
             }
             next = loopFollowedArtistsJson.findValue("next").asText();
@@ -76,8 +75,8 @@ public class UserService implements SpotifyUserService {
 
         List<JsonNode> sortedDataNodes = items.findParents("name")
                 .stream()
-                .sorted(Comparator.comparing(o -> o.get("name").asText()))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(o -> o.get("name").asText())).toList();
+
         return mapper.createObjectNode().arrayNode().addAll(sortedDataNodes);  //TODO
     }
 
@@ -88,7 +87,7 @@ public class UserService implements SpotifyUserService {
 
     @Override
     public void followArtists(String ids) {
-        restTemplate.put("https://api.spotify.com/v1/me/following?type=artist&ids=" + ids, HttpMethod.PUT);
+        restTemplate.exchange("https://api.spotify.com/v1/me/following?type=artist&ids=" + ids, HttpMethod.PUT, HttpEntity.EMPTY, Void.class);
     }
 
     @Override
